# bevy_sprite_alt

./: Cargo.toml
.github/workflows/: ci.yml
bevy-sprite-alt/: Cargo.toml
bevy-sprite-alt/src/: bundle.rs  texture_atlas.rs  texture_atlas_builder.rs
bevy_sprite_alt/: Cargo.toml
bevy_sprite_alt/src/: bundle.rs  lib.rs  rect.rs  sprite.rs  texture_atlas.rs  texture_atlas_builder.rs
ci/: Cargo.toml
ci/src/: main.rs
examples/: usage.rs
