[package]
name = "bevy-sprite-alt"
authors = ["GlennFolker"]
version = "0.1.0"
edition = "2021"
exclude = ["assets/**/*"]

[dependencies]
bevy_app = "0.8"
bevy_asset = "0.8"
bevy_ecs = "0.8"
bevy_log = "0.8"
bevy_reflect = "0.8"
bevy_render = "0.8"
bevy_math = "0.8"
bevy_transform = "0.8"
bevy_utils = "0.8"
thiserror = "1.0"
rectangle-pack = "0.4"

[dev-dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_winit",

    "png",

    "dynamic"
]

[[example]]
name = "usage"
path = "../examples/usage.rs"
